# summerlog

./: .gitignore  CHANGELOG.md  README.md  cleanup.sh  pyproject.toml  requirements.txt  setup.sh  update.sh
scripts/: ai_log_summary.py  install_summerlog.sh  push_to_github.sh  setup.sh
summerlog/: ai_log_summary.py  styles.css
