[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "summerlog"
version = "1.1.0"
authors = [
  { name="Allie Bayless", email="drbayless@gmail.com" },
]
description = "An AI-powered log summarizer for Docker containers."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dotenv",
    "openai",
    "markdown2",
]

[project.scripts]
summerlog = "summerlog.ai_log_summary:main"
summerlog-configure = "summerlog.ai_log_summary:configure"

[project.urls]
"Homepage" = "https://github.com/allisonhere/summerlog"
"Bug Tracker" = "https://github.com/allisonhere/summerlog/issues"
